<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:cardCornerRadius="@dimen/dp_5"
        app:cardElevation="@dimen/dp_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120">

            <ImageView
                android:id="@+id/tou_iv"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:scaleType="fitXY"
                 />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toRightOf="@+id/tou_iv"
                android:text="@string/college_title"
                android:textColor="@color/colorTextTitleHome"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="@dimen/dp_37"
                android:layout_height="@dimen/dp_14"
                android:layout_alignBottom="@+id/title"
                android:layout_centerVertical="@id/title"
                android:layout_marginBottom="@dimen/dp_3"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/title"
                android:src="@mipmap/have_aids" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_below="@+id/title"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/college_age"
                android:textColor="@color/colorAge"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_age"
                android:layout_below="@+id/tv_age"
                android:layout_marginRight="@dimen/dp_13"
                android:layout_marginTop="@dimen/dp_5"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/college_data"
                android:textColor="@color/colorTextSubhead"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tou_iv"
                android:layout_alignLeft="@+id/tv_data"
                android:text="¥"
                android:textColor="@color/colorSymbol"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_88"
                android:layout_toRightOf="@+id/symbol"
                android:text="19.9"
                android:textColor="@color/colorSymbol"
                android:textSize="@dimen/sp_19" />

            <TextView
                android:id="@+id/qi_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tou_iv"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_toRightOf="@+id/price"
                android:text="@string/college_qi"
                android:textColor="@color/colorTextTitleHome"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tou_iv"
                android:layout_marginLeft="@dimen/dp_11"
                android:layout_toRightOf="@+id/qi_tv"
                android:text="@string/college_yuan"
                android:textColor="@color/colorTextSubhead"
                android:textSize="@dimen/sp_11" />

            <View
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_1"
                android:layout_alignBottom="@+id/tou_iv"
                android:layout_marginBottom="@dimen/dp_6"
                android:layout_marginLeft="@dimen/dp_9"
                android:layout_marginTop="@dimen/dp_18"
                android:layout_toRightOf="@+id/qi_tv"
                android:background="@color/colorTextSubhead" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>