<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tiancaijiazu.app.activitys.activitypage.LordActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/fragment_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            />
        <LinearLayout
            android:id="@+id/line"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/background_with_shadow"
            android:layout_height="@dimen/dp_49">
            <LinearLayout
                android:id="@+id/home"
                android:layout_width="@dimen/dp_0"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/home_iv"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/selector_home"/>
                <TextView
                    android:id="@+id/home_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="#BBBBBB"
                    android:text="@string/home_page"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/college"
                android:layout_width="@dimen/dp_0"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/college_iv"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/selector_college"/>
                <TextView
                    android:id="@+id/college_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="#BBBBBB"
                    android:text="@string/college"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/parentingEncyclopedia"
                android:layout_width="@dimen/dp_0"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/parentingEncyclopedia_iv"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/selector_parentingencyclopedia"/>
                <TextView
                    android:id="@+id/parentingEncyclopedia_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="#BBBBBB"
                    android:text="@string/parenting_encyclopedia"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/shoppingMall"
                android:layout_width="@dimen/dp_0"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/shoppingMall_iv"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/selector_shoppingmall" />

                <TextView
                    android:id="@+id/shoppingMall_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="#BBBBBB"
                    android:text="商城"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/my"
                android:layout_width="@dimen/dp_0"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/my_iv"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/selector_my"/>
                <TextView
                    android:id="@+id/my_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="#BBBBBB"
                    android:text="@string/my"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include
        layout="@layout/to_load_layout"/>
</RelativeLayout>
