<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_169"
        app:cardCornerRadius="@dimen/dp_5"
        app:cardElevation="@dimen/dp_3"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bring_up_iv"
                    android:layout_width="@dimen/dp_33"
                    android:layout_height="@dimen/dp_33"
                    android:background="@mipmap/bring_up" />

                <TextView
                    android:id="@+id/bring_up_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/bring_up"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/online_college_iv"
                    android:layout_width="@dimen/dp_33"
                    android:layout_height="@dimen/dp_33"
                    android:background="@mipmap/online_college" />

                <TextView
                    android:id="@+id/online_college_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/online_college"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/offline_class_iv"
                    android:layout_width="@dimen/dp_33"
                    android:layout_height="@dimen/dp_33"
                    android:background="@mipmap/offline_class" />

                <TextView
                    android:id="@+id/offline_class_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/bring_up"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/family_mall_iv"
                    android:layout_width="@dimen/dp_33"
                    android:layout_height="@dimen/dp_33"
                    android:background="@mipmap/family_mall" />

                <TextView
                    android:id="@+id/family_mall_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/family_mall"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>